k8s/depl-redis-single.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: "default"
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:6-alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 6379
