k8s/deployment-tfstack-api-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: "default"
  name: tfstack-api-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tfstack-api-app
  template:
    metadata:
      annotations:
        force_rollout_commit: "<COMMIT>" # because we only use latest of image, we must force rollout.
      labels:
        app: tfstack-api-app
    spec:
      containers:
        - name: tfstack-api-app
          image: elmoenco/tfstack-api-app:latest # We're not using image tag versions, only latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: aws-credentials
              mountPath: "/root/.aws" # will create a file called credentials
              readOnly: true
      volumes:
        - name: aws-credentials
          secret:
            secretName: aws-credentials
