k8s/redis-single.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: "default"
  name: redis # this is the DNS name that is known within the cluster / namespace
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  selector:
    app: redis

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: "default"
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:6-alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 6379
