k8s/service-redis-single.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: "default"
  name: redis # this is the DNS name that is known within the cluster / namespace
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  selector:
    app: redis
