k8s/service-tfstack-api-app.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: "default"
  name: tfstack-api-app
spec:
  #type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: tfstack-api-app
